--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,7 +36,39 @@
         "showReuseMessage": false,
         "clear": true
       },
+      "problemMatcher": "$msCompile",
+      "dependsOn": "clear-coverage"
+    },
+    {
+      "label": "clear-coverage",
+      "command": "rmdir '*/_coverage_results' -Recurse",
+      "type": "shell",
+      "group": "test",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": false,
+        "clear": true
+      },
       "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "get-coverage",
+      "command": "dotnet test './tests/unit' -s './tests/runsettings.xml' -r './tests/_coverage_results/wrapper_create'",
+      "type": "shell",
+      "group": "test",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": false,
+        "clear": false
+      },
+      "problemMatcher": "$msCompile",
+      "dependsOn": "clear-coverage"
     }
   ]
 }
