Add integration test run to CI build

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -27,3 +27,6 @@ jobs:
 
       - name: run unit tests
         run: dotnet test .//tests//unit//Test.Unit.csproj --no-restore
+
+      - name: run integration tests
+        run: dotnet test .//tests//examples//Test.Examples.csproj --no-restore
