--- a/src/DotNet.FluentIfThenElse.csproj
+++ b/src/DotNet.FluentIfThenElse.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>Wizkisoft.DotNet.FluentIfThenElse</PackageId>
+    <Version>0.1.0</Version>
+    <Authors>Gerard Torres</Authors>
+    <Company>Wizkisoft</Company>
   </PropertyGroup>
 
 </Project>
